# streamstat

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  system_design.md
bench/: loadgen_main.cpp
docs/: system_design.md
include/streamfeat/: types.h
include/streamfeat/core/: entity_state.h  window_state.h
include/streamfeat/runtime/: queue.h
proto/: streamfeat.proto
src/: main.cpp
src/core/: entity_state.h  window_state.cpp  window_state.h
tests/: test_bounded_queue_multithreaded.cpp  test_bounded_queue_singlethreaded.cpp  test_entity_state.cpp  test_window_state.cpp
